--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,18 +2,17 @@
     package="com.shahzaib.vision">
 
     <uses-permission android:name="android.permission.INTERNET"/>
-    <uses-permission-sdk-23 android:name="android.permission.INTERNE"/>
 
     <uses-permission android:name="android.permission.CAMERA"/>
-    <uses-permission-sdk-23 android:name="android.permission.CAMERA"/>
 
     <application
-        android:allowBackup="true"
+        android:hardwareAccelerated="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/AppTheme"
+        android:allowBackup="true">
 
         <activity android:name=".BarcodeScanner"
             android:noHistory="true">
@@ -25,6 +24,10 @@
         </activity>
 
         <activity android:name=".TextRecognition"
+            android:noHistory="true"
+            android:theme="@style/AppTheme" />
+
+        <activity android:name=".RecognizedActivity"
             android:noHistory="true"
             android:theme="@style/AppTheme" />
 
